--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "description": "Inhouse Components Web",
   "engines": {
-    "node": "18.x",
-    "npm": "9.x"
+    "node": "20.x",
+    "npm": "10.x"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --no-ci",
@@ -32,11 +32,11 @@
     "eslint": "8.47.0",
     "eslint-plugin-react": "7.32.2",
     "gh-pages": "5.0.0",
-    "lerna": "6.6.2",
+    "lerna": "^8.1.2",
     "reg-keygen-git-hash-plugin": "0.12.1",
     "reg-notify-github-with-api-plugin": "0.12.1",
     "reg-publish-s3-plugin": "0.12.1",
-    "reg-suit": "0.12.1",
+    "reg-suit": "^0.14.3",
     "rimraf": "^5.0.1",
     "sass": "1.62.1",
     "stylelint": "14.16.1",
@@ -44,5 +44,8 @@
     "stylelint-config-standard-scss": "2.0.1",
     "ts-node": "10.9.1",
     "typescript": "5.0.4"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
