--- a/packages/components-web/package.json
+++ b/packages/components-web/package.json
@@ -35,14 +35,14 @@
     "@pepabo-inhouse/select": "^1.0.0",
     "@pepabo-inhouse/side-navigation": "^1.0.0",
     "@pepabo-inhouse/skeleton": "^1.0.0",
+    "@pepabo-inhouse/snackbar": "^1.0.0",
     "@pepabo-inhouse/table": "^1.0.0",
     "@pepabo-inhouse/textfield": "^1.0.0",
     "@pepabo-inhouse/thumbnail": "^1.0.0",
     "@pepabo-inhouse/tokens": "^0.14.0",
-    "@pepabo-inhouse/snackbar": "^1.0.0",
     "autoprefixer": "10.4.14",
     "cssnano": "5.1.15",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.38",
     "postcss-cli": "10.1.0",
     "sass": "1.62.1"
   },
@@ -50,7 +50,7 @@
     "build": "npm run clean && npm run compile",
     "clean": "rm -rf dist",
     "compile": "mkdir dist && npm run compile:scss && npm run compile:postcss:min && npm run compile:postcss:unmin",
-    "compile:scss": "sass inhouse-components-web.scss:dist/inhouse-components-web.css -I node_modules --no-source-map",
+    "compile:scss": "sass inhouse-components-web.scss:dist/inhouse-components-web.css -I ../../node_modules --no-source-map",
     "compile:postcss:unmin": "postcss dist/inhouse-components-web.css --output dist/inhouse-components-web.css --use autoprefixer",
     "compile:postcss:min": "postcss dist/inhouse-components-web.css --output dist/inhouse-components-web.min.css --use autoprefixer --use cssnano",
     "watch": "npm run compile:scss -- --watch"
