--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pepabo-inhouse/button",
   "description": "Inhouse Components for the web button component",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/pepabo/inhouse-components-web.git",
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@pepabo-inhouse/adapter": "^1.0.0",
-    "@pepabo-inhouse/icon": "^1.0.0",
+    "@pepabo-inhouse/icon": "^1.1.0-alpha.0",
     "@pepabo-inhouse/skeleton": "^1.0.0"
   },
   "devDependencies": {
