--- a/packages/components-web/package.json
+++ b/packages/components-web/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pepabo-inhouse/components-web",
   "description": "Inhouse UI components for the web",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/pepabo/inhouse-components-web.git",
@@ -15,27 +15,27 @@
     "@pepabo-inhouse/app-bar": "^1.0.0",
     "@pepabo-inhouse/avatar": "^1.0.0",
     "@pepabo-inhouse/bottom-navigation": "^1.0.0",
-    "@pepabo-inhouse/button": "^1.0.0",
+    "@pepabo-inhouse/button": "^1.1.0-alpha.0",
     "@pepabo-inhouse/cell": "^1.0.0",
-    "@pepabo-inhouse/checkbox": "^1.0.0",
+    "@pepabo-inhouse/checkbox": "^1.1.0-alpha.0",
     "@pepabo-inhouse/constants": "^1.0.0",
     "@pepabo-inhouse/container": "^1.0.0",
-    "@pepabo-inhouse/description-list": "^1.0.0",
+    "@pepabo-inhouse/description-list": "^1.1.0-alpha.0",
     "@pepabo-inhouse/flavor": "^1.0.0",
     "@pepabo-inhouse/grid": "^1.0.0",
     "@pepabo-inhouse/header": "^1.0.0",
-    "@pepabo-inhouse/icon": "^1.0.0",
-    "@pepabo-inhouse/interactive-list": "^1.0.0",
+    "@pepabo-inhouse/icon": "^1.1.0-alpha.0",
+    "@pepabo-inhouse/interactive-list": "^1.1.0-alpha.0",
     "@pepabo-inhouse/interactive-table": "^1.0.0",
-    "@pepabo-inhouse/list": "^1.0.0",
+    "@pepabo-inhouse/list": "^1.1.0-alpha.0",
     "@pepabo-inhouse/navigation-drawer": "^1.0.0",
     "@pepabo-inhouse/progress-indicator": "^1.0.0",
-    "@pepabo-inhouse/radio": "^1.0.0",
+    "@pepabo-inhouse/radio": "^1.1.0-alpha.0",
     "@pepabo-inhouse/scrim": "^1.0.0",
     "@pepabo-inhouse/select": "^1.0.0",
     "@pepabo-inhouse/side-navigation": "^1.0.0",
     "@pepabo-inhouse/skeleton": "^1.0.0",
-    "@pepabo-inhouse/snackbar": "^1.0.0",
+    "@pepabo-inhouse/snackbar": "^1.1.0-alpha.0",
     "@pepabo-inhouse/table": "^1.0.0",
     "@pepabo-inhouse/textfield": "^1.0.0",
     "@pepabo-inhouse/thumbnail": "^1.0.0",
