--- a/packages/list/package.json
+++ b/packages/list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pepabo-inhouse/list",
   "description": "Inhouse Components for the web list component",
-  "version": "1.0.0",
+  "version": "1.1.0-alpha.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/pepabo/inhouse-components-web.git",
@@ -13,7 +13,7 @@
   "dependencies": {
     "@pepabo-inhouse/adapter": "^1.0.0",
     "@pepabo-inhouse/cell": "^1.0.0",
-    "@pepabo-inhouse/icon": "^1.0.0"
+    "@pepabo-inhouse/icon": "^1.1.0-alpha.0"
   },
   "devDependencies": {
     "@pepabo-inhouse/flavor": "^1.0.0",
