--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pepabo-inhouse/icon",
   "description": "Inhouse Components for the web component",
-  "version": "1.1.0-alpha.0",
+  "version": "1.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/pepabo/inhouse-components-web.git",
@@ -11,11 +11,11 @@
     "access": "public"
   },
   "dependencies": {
-    "@pepabo-inhouse/adapter": "^1.0.0"
+    "@pepabo-inhouse/adapter": "^1.1.0"
   },
   "devDependencies": {
     "@gyugyu/webfonts-generator": "^1.0.0",
-    "@pepabo-inhouse/flavor": "^1.0.0",
+    "@pepabo-inhouse/flavor": "^1.1.0",
     "@pepabo-inhouse/tokens": "^0.17.0"
   },
   "scripts": {
