--- a/packages/stories-web/package.json
+++ b/packages/stories-web/package.json
@@ -2,7 +2,7 @@
   "name": "@pepabo-inhouse/stories-web",
   "description": "Inhouse Components for the web component",
   "private": true,
-  "version": "1.1.0-alpha.0",
+  "version": "1.1.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/pepabo/inhouse-components-web.git",
@@ -12,36 +12,36 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
-    "@pepabo-inhouse/adapter": "^1.0.0",
-    "@pepabo-inhouse/app-bar": "^1.0.0",
-    "@pepabo-inhouse/avatar": "^1.0.0",
-    "@pepabo-inhouse/bottom-navigation": "^1.0.0",
-    "@pepabo-inhouse/button": "^1.1.0-alpha.0",
-    "@pepabo-inhouse/card": "^1.0.0",
-    "@pepabo-inhouse/cell": "^1.0.0",
-    "@pepabo-inhouse/checkbox": "^1.1.0-alpha.0",
-    "@pepabo-inhouse/components-web": "^1.1.0-alpha.0",
+    "@pepabo-inhouse/adapter": "^1.1.0",
+    "@pepabo-inhouse/app-bar": "^1.1.0",
+    "@pepabo-inhouse/avatar": "^1.1.0",
+    "@pepabo-inhouse/bottom-navigation": "^1.1.0",
+    "@pepabo-inhouse/button": "^1.1.0",
+    "@pepabo-inhouse/card": "^1.1.0",
+    "@pepabo-inhouse/cell": "^1.1.0",
+    "@pepabo-inhouse/checkbox": "^1.1.0",
+    "@pepabo-inhouse/components-web": "^1.1.0",
     "@pepabo-inhouse/constants": "^1.0.0",
-    "@pepabo-inhouse/container": "^1.0.0",
-    "@pepabo-inhouse/description-list": "^1.1.0-alpha.0",
-    "@pepabo-inhouse/flavor": "^1.0.0",
-    "@pepabo-inhouse/grid": "^1.0.0",
-    "@pepabo-inhouse/header": "^1.0.0",
-    "@pepabo-inhouse/icon": "^1.1.0-alpha.0",
-    "@pepabo-inhouse/interactive-list": "^1.1.0-alpha.0",
-    "@pepabo-inhouse/interactive-table": "^1.0.0",
-    "@pepabo-inhouse/list": "^1.1.0-alpha.0",
-    "@pepabo-inhouse/navigation-drawer": "^1.0.0",
-    "@pepabo-inhouse/progress-indicator": "^1.0.0",
-    "@pepabo-inhouse/radio": "^1.1.0-alpha.0",
-    "@pepabo-inhouse/scrim": "^1.0.0",
-    "@pepabo-inhouse/select": "^1.0.0",
-    "@pepabo-inhouse/side-navigation": "^1.0.0",
-    "@pepabo-inhouse/skeleton": "^1.0.0",
-    "@pepabo-inhouse/snackbar": "^1.1.0-alpha.0",
-    "@pepabo-inhouse/table": "^1.0.0",
-    "@pepabo-inhouse/textfield": "^1.0.0",
-    "@pepabo-inhouse/thumbnail": "^1.0.0",
+    "@pepabo-inhouse/container": "^1.1.0",
+    "@pepabo-inhouse/description-list": "^1.1.0",
+    "@pepabo-inhouse/flavor": "^1.1.0",
+    "@pepabo-inhouse/grid": "^1.1.0",
+    "@pepabo-inhouse/header": "^1.1.0",
+    "@pepabo-inhouse/icon": "^1.1.0",
+    "@pepabo-inhouse/interactive-list": "^1.1.0",
+    "@pepabo-inhouse/interactive-table": "^1.1.0",
+    "@pepabo-inhouse/list": "^1.1.0",
+    "@pepabo-inhouse/navigation-drawer": "^1.1.0",
+    "@pepabo-inhouse/progress-indicator": "^1.1.0",
+    "@pepabo-inhouse/radio": "^1.1.0",
+    "@pepabo-inhouse/scrim": "^1.1.0",
+    "@pepabo-inhouse/select": "^1.1.0",
+    "@pepabo-inhouse/side-navigation": "^1.1.0",
+    "@pepabo-inhouse/skeleton": "^1.1.0",
+    "@pepabo-inhouse/snackbar": "^1.1.0",
+    "@pepabo-inhouse/table": "^1.1.0",
+    "@pepabo-inhouse/textfield": "^1.1.0",
+    "@pepabo-inhouse/thumbnail": "^1.1.0",
     "@pepabo-inhouse/tokens": "^0.17.0",
     "@storybook/addon-essentials": "^7.0.6",
     "@storybook/react": "^7.0.6",
