アプリケーションのステータスを表示する目的として利用されるAlertを追加

--- a/packages/components-web/package.json
+++ b/packages/components-web/package.json
@@ -40,6 +40,7 @@
     "@pepabo-inhouse/table": "^1.2.0",
     "@pepabo-inhouse/textfield": "^1.2.0",
     "@pepabo-inhouse/thumbnail": "^1.2.0",
+    "@pepabo-inhouse/alert": "^1.2.0",
     "@pepabo-inhouse/tokens": "^0.17.0",
     "autoprefixer": "10.4.14",
     "cssnano": "5.1.15",
