--- a/packages/callout/package.json
+++ b/packages/callout/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@pepabo-inhouse/alert",
+  "name": "@pepabo-inhouse/callout",
   "description": "Inhouse Components for the web component",
-  "version": "1.4.1",
+  "version": "1.6.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/pepabo/inhouse-components-web.git",
-    "directory": "packages/alert"
+    "directory": "packages/callout"
   },
   "publishConfig": {
     "access": "public"
