--- a/packages/components-web/package.json
+++ b/packages/components-web/package.json
@@ -12,11 +12,11 @@
   },
   "devDependencies": {
     "@pepabo-inhouse/adapter": "^1.4.1",
-    "@pepabo-inhouse/alert": "^1.4.1",
     "@pepabo-inhouse/app-bar": "^1.4.1",
     "@pepabo-inhouse/avatar": "^1.4.1",
     "@pepabo-inhouse/bottom-navigation": "^1.4.1",
     "@pepabo-inhouse/button": "^1.5.0",
+    "@pepabo-inhouse/callout": "^1.6.0",
     "@pepabo-inhouse/card": "^1.4.1",
     "@pepabo-inhouse/cell": "^1.4.1",
     "@pepabo-inhouse/checkbox": "^1.5.0",
