--- a/packages/stories-web/package.json
+++ b/packages/stories-web/package.json
@@ -13,11 +13,11 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
     "@pepabo-inhouse/adapter": "^1.4.1",
-    "@pepabo-inhouse/alert": "^1.4.1",
     "@pepabo-inhouse/app-bar": "^1.4.1",
     "@pepabo-inhouse/avatar": "^1.4.1",
     "@pepabo-inhouse/bottom-navigation": "^1.4.1",
     "@pepabo-inhouse/button": "^1.5.0",
+    "@pepabo-inhouse/callout": "^1.6.0",
     "@pepabo-inhouse/card": "^1.4.1",
     "@pepabo-inhouse/cell": "^1.4.1",
     "@pepabo-inhouse/checkbox": "^1.5.0",
