ビルドした結果はそのパッケージの中に含まれていたほうが成果物の衝突が発生しないので望ましい

--- a/packages/stories-web/package.json
+++ b/packages/stories-web/package.json
@@ -61,7 +61,7 @@
   },
   "scripts": {
     "start": "storybook dev",
-    "build": "storybook build -c .storybook -o ../../dist",
+    "build": "storybook build -c .storybook -o dist",
     "clean": "rm -rf dist"
   },
   "browserslist": [
