SassdocとStorybookを同じリポジトリのGitHub Pagesで公開できるようにする
パスをパッケージ名にあわせて設定する

- Storybookは /stories-web で公開
- Sassdocは /adapter で公開

ルートページに訪問したときはstories-webにリダイレクトするようにし、リンク切れにならないようにする

--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -19,6 +19,14 @@ jobs:
         run: npm ci
       - name: Build packages
         run: npm run compile
+      - name: make public directory
+        run: mkdir dist
+      - name: Create redirect HTML
+        run: echo '<!DOCTYPE html><html><head><meta http-equiv="refresh" content="0; url=/inhouse-components-web/stories-web"></head><body></body></html>' > dist/index.html
+      - name: Move adapter dist
+        run: mv packages/adapter/dist dist/adapter
+      - name: Move stories-web dist
+        run: mv packages/stories-web/dist dist/stories-web
       - name: Upload Documents
         uses: actions/upload-pages-artifact@v3
         with:
