--- a/packages/components-web/package.json
+++ b/packages/components-web/package.json
@@ -38,6 +38,7 @@
     "@pepabo-inhouse/side-navigation": "^3.3.1",
     "@pepabo-inhouse/skeleton": "^3.3.1",
     "@pepabo-inhouse/snackbar": "^3.3.1",
+    "@pepabo-inhouse/tab": "^3.3.1",
     "@pepabo-inhouse/table": "^3.3.1",
     "@pepabo-inhouse/textfield": "^3.3.1",
     "@pepabo-inhouse/thumbnail": "^3.3.1",
