--- a/packages/stories-web/package.json
+++ b/packages/stories-web/package.json
@@ -53,6 +53,7 @@
     "core-js": "3.32.0",
     "css-loader": "6.7.3",
     "react": "18.2.0",
+    "react-aria-components": "^1.8.0",
     "react-dom": "18.2.0",
     "sass": "1.62.1",
     "sass-loader": "13.2.2",
@@ -67,8 +68,5 @@
   },
   "browserslist": [
     "last 2 versions"
-  ],
-  "dependencies": {
-    "react-aria-components": "^1.8.0"
-  }
+  ]
 }
