--- a/packages/components-web/package.json
+++ b/packages/components-web/package.json
@@ -43,6 +43,7 @@
     "@pepabo-inhouse/textfield": "^3.4.0",
     "@pepabo-inhouse/thumbnail": "^3.4.0",
     "@pepabo-inhouse/tokens": "^2.4.0",
+    "@pepabo-inhouse/validation-message": "^3.4.0",
     "autoprefixer": "10.4.14",
     "cssnano": "5.1.15",
     "postcss": "^8.4.38",
