--- a/packages/stories-web/package.json
+++ b/packages/stories-web/package.json
@@ -45,6 +45,7 @@
     "@pepabo-inhouse/textfield": "^3.4.0",
     "@pepabo-inhouse/thumbnail": "^3.4.0",
     "@pepabo-inhouse/tokens": "^2.4.0",
+    "@pepabo-inhouse/validation-message": "^3.4.0",
     "@storybook/addon-essentials": "^7.0.6",
     "@storybook/react": "^7.0.6",
     "@storybook/react-webpack5": "^7.0.6",
