--- a/packages/components-web/package.json
+++ b/packages/components-web/package.json
@@ -15,6 +15,7 @@
     "@pepabo-inhouse/app-bar": "^3.5.0",
     "@pepabo-inhouse/avatar": "^3.5.0",
     "@pepabo-inhouse/bottom-navigation": "^3.5.0",
+    "@pepabo-inhouse/breadcrumb": "^3.5.0",
     "@pepabo-inhouse/button": "^3.5.0",
     "@pepabo-inhouse/callout": "^3.5.0",
     "@pepabo-inhouse/card": "^3.5.0",
