--- a/packages/stories-web/package.json
+++ b/packages/stories-web/package.json
@@ -25,6 +25,7 @@
     "@pepabo-inhouse/constants": "^3.4.0",
     "@pepabo-inhouse/container": "^3.5.0",
     "@pepabo-inhouse/description-list": "^3.5.0",
+    "@pepabo-inhouse/dialog": "^3.5.0",
     "@pepabo-inhouse/flavor": "^3.4.0",
     "@pepabo-inhouse/grid": "^3.5.0",
     "@pepabo-inhouse/header": "^3.5.0",
